--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
     namespace 'com.example.coversong'
     buildToolsVersion '30.0.3'
 }
@@ -47,6 +49,8 @@ dependencies {
     implementation "com.kakao.sdk:v2-share:2.13.0" // 메시지(카카오톡 공유)
     implementation "com.kakao.sdk:v2-navi:2.13.0" // 카카오내비
     implementation "com.kakao.sdk:v2-friend:2.13.0" // 카카오톡 소셜 피커, 리소스 번들 파일 포함
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     implementation 'com.google.android.exoplayer:exoplayer:2.13.3'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.13.3'
