--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,9 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven{url 'https://drepo.kakao.com/nexus/content/groups/public/'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:7.1.0-alpha11'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
