--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Coversong">
-        android:name=".LoginActivity"
+        android:theme="@style/Theme.Coversong"
+        android:name=".main.KakaoApplication"
+        android:usesCleartextTraffic="true">
+
         <activity
-            android:name=".main.LoginActivity"
+            android:name=".main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
