--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation 'com.google.android.material:material:1.1.0'
+
+    implementation "com.kakao.sdk:v2-user:2.8.3" // 카카오 로그인
+    implementation "com.kakao.sdk:v2-talk:2.8.3" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-story:2.8.3" // 카카오스토리
+    implementation "com.kakao.sdk:v2-link:2.8.3" // 메시지(카카오링크)
+    implementation "com.kakao.sdk:v2-navi:2.8.3" // 카카오내비
 }
