--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    //id 'com.google.gms.google-services'
 }
 
 android {
@@ -59,4 +60,10 @@ dependencies {
     implementation "com.kakao.sdk:v2-story:2.8.3" // 카카오스토리
     implementation "com.kakao.sdk:v2-link:2.8.3" // 메시지(카카오링크)
     implementation "com.kakao.sdk:v2-navi:2.8.3" // 카카오내비
+
+    implementation 'com.google.firebase:firebase-analytics:20.0.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation platform('com.google.firebase:firebase-bom:31.5.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
