--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,11 @@ dependencies {
     implementation "com.kakao.sdk:v2-navi:2.8.3" // 카카오내비
 
     implementation 'com.kyleduo.switchbutton:library:2.0.0'
+
+    implementation 'com.google.firebase:firebase-database:20.2.1'
+    implementation platform('com.google.firebase:firebase-bom:31.4.0')
+    implementation 'com.google.firebase:firebase-storage:20.2.0'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
