--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.2.1'
     implementation platform('com.google.firebase:firebase-bom:31.4.0')
     implementation 'com.google.firebase:firebase-storage:20.2.0'
-
+    implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
