--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.4.0')
     implementation 'com.google.firebase:firebase-storage:20.2.0'
 
+    implementation 'androidx.palette:palette:1.0.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
