--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Coversong"
+        android:theme="@style/Theme.Design.Light.NoActionBar"
         android:name=".main.KakaoApplication"
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true">
