--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,11 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.google.firebase:firebase-appcheck-playintegrity'
+
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 }
 
 apply plugin: 'com.google.gms.google-services'
