--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation "com.kakao.sdk:v2-story:2.8.3" // 카카오스토리
     implementation "com.kakao.sdk:v2-link:2.8.3" // 메시지(카카오링크)
     implementation "com.kakao.sdk:v2-navi:2.8.3" // 카카오내비
+    implementation 'com.kakao.sdk:usermgmt:1.32.0' // 카카오 사용자 정보 가져오기
+
 
     implementation 'com.kyleduo.switchbutton:library:2.0.0'
 
