--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.9.0-beta01'
@@ -55,19 +55,25 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation 'com.google.android.material:material:1.1.0'
 
-    implementation "com.kakao.sdk:v2-user:2.8.3" // 카카오 로그인
-    implementation "com.kakao.sdk:v2-talk:2.8.3" // 친구, 메시지(카카오톡)
-    implementation "com.kakao.sdk:v2-story:2.8.3" // 카카오스토리
-    implementation "com.kakao.sdk:v2-link:2.8.3" // 메시지(카카오링크)
-    implementation "com.kakao.sdk:v2-navi:2.8.3" // 카카오내비
-    implementation 'com.kakao.sdk:usermgmt:1.32.0' // 카카오 사용자 정보 가져오기
-
-
+    implementation "com.kakao.sdk:v2-user:2.8.3"
+    implementation "com.kakao.sdk:v2-talk:2.8.3"
+    implementation "com.kakao.sdk:v2-story:2.8.3"
+    implementation "com.kakao.sdk:v2-link:2.8.3"
+    implementation "com.kakao.sdk:v2-navi:2.8.3"
     implementation 'com.kyleduo.switchbutton:library:2.0.0'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.17"
+    implementation "com.squareup.retrofit2:converter-gson:2.7.1"
+    implementation "com.squareup.retrofit2:retrofit:2.7.1"
+    implementation "com.squareup.okhttp3:okhttp:4.3.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.3.1"
+    implementation 'com.google.firebase:firebase-auth:22.0.0'
 
     implementation 'com.google.firebase:firebase-database:20.2.1'
     implementation platform('com.google.firebase:firebase-bom:31.4.0')
     implementation 'com.google.firebase:firebase-storage:20.2.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.6.0'
+    implementation "org.koin:koin-androidx-scope:2.0.1"
+    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
 
     implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
